@@ -1,10 +1,13 @@
 # Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
-
 sudo: required
+dist: bionic
 
-dist: trusty
+jobs:
+  include:
+    - name: r-4.0
+      env: R_VERSION="4.0"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
