@@ -2,6 +2,8 @@
 
 	* README.md: Added 'Last Commit' badge
 
+	* .travis.yml: Updated to 'bionic' and R 4.0.*
+
 2019-12-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.1
